Fix long words overflow in post

--- a/src/app.css
+++ b/src/app.css
@@ -14,6 +14,10 @@
     justify-content: space-between;
 }
 
+.post * {
+    overflow-wrap: break-word;
+}
+
 .post h1,h2,h3,h4 {
     border-bottom: 1px solid #e0e0e0;
     scroll-margin-top: 50px;
